force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>