force-app/main/default/objects/Batch__c/fields/Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Batch created Date</inlineHelpText>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>