force-app/main/default/objects/Batch__c/fields/Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Date__c</fullName>
    <inlineHelpText>Batch Created date</inlineHelpText>
    <label>Batch Date</label>
    <type>Date</type>
</CustomField>