force-app/main/default/objects/Batch__c/fields/Batch_Response_Log__c.field-meta.xml
<CustomField>
    <fullName>Batch_Response_Log__c</fullName>
    <inlineHelpText>Batch response from Timberline</inlineHelpText>
    <label>Batch Response Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>