force-app/main/default/objects/Batch__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <inlineHelpText>Batch status from Timberline. Initially the batch status will be &apos;New&apos;. Once the batch is sent to Timberline, the status will be updated to Sync Successful/Sync Failed based on the response from Timberline.</inlineHelpText>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sync Successful</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>