force-app/main/default/objects/Batch__c/fields/Batch_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Sync_Date__c</fullName>
    <label>Batch Sync Date</label>
    <type>DateTime</type>
</CustomField>