force-app/main/default/objects/Batch__c/fields/Batch_Value__c.field-meta.xml
<CustomField>
    <fullName>Batch_Value__c</fullName>
    <inlineHelpText>SUM of &apos;Batch value&apos; from all the related Material Req batches</inlineHelpText>
    <label>Batch Value</label>
    <summarizedField>Material_Req_Batch__c.Batch_Value__c</summarizedField>
    <summaryForeignKey>Material_Req_Batch__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>