force-app/main/default/objects/Batch__c/fields/Number_of_Entries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entries__c</fullName>
    <inlineHelpText>SUM of &apos;Number of Entries&apos; from all the related Material Req batches</inlineHelpText>
    <label>Number of Entries</label>
    <summarizedField>Material_Req_Batch__c.Number_of_Entries__c</summarizedField>
    <summaryForeignKey>Material_Req_Batch__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>