force-app/main/default/objects/Batch__c/fields/Send__c.field-meta.xml
<CustomField>
    <fullName>Send__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be set to &apos;True&apos; to trigger an OBM to to Jitterbit which sends the batch details to Timberline</inlineHelpText>
    <label>Send</label>
    <type>Checkbox</type>
</CustomField>