force-app/main/default/objects/Batch__c/fields/Timberline_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Batch_No__c</fullName>
    <inlineHelpText>icissueBtch Number from Timberline</inlineHelpText>
    <label>Timberline Batch No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>