force-app/main/default/objects/Batch__c/fields/Timberline_description__c.field-meta.xml
<CustomField>
    <fullName>Timberline_description__c</fullName>
    <formula>IF(ISBLANK(Batch_Date__c),&apos;&apos;, TEXT(YEAR(Batch_Date__c ))+ LPAD(TEXT(MONTH(Batch_Date__c )),2,&apos;0&apos;)+LPAD(TEXT(DAY(Batch_Date__c )),2,&apos;0&apos;)+&apos;SFIM&apos;)</formula>
    <inlineHelpText>Batch Date in the format &lt;YYYYMMDD&gt;SFIM</inlineHelpText>
    <label>Timberline description</label>
    <type>Text</type>
</CustomField>