force-app/main/default/objects/Batch__c/validationRules/Validate_Batch_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Batch_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Batch_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Batch_Date__c</errorDisplayField>
    <errorMessage>Batch Date should not be a future date</errorMessage>
</ValidationRule>