force-app/main/default/objects/Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timberline_Batch_No__c</columns>
    <columns>Batch_Value__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>Batch_Sync_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>